add dropdown for mobile menu

--- a/app/components/carousel_component.html.erb
+++ b/app/components/carousel_component.html.erb
@@ -2,9 +2,8 @@
   <!-- Conteneur des éléments du carousel -->
 
   <div class="w-full h-full p-10 flex flex-col items-center justify-center absolute top-0 left-0 bg-transparent z-10">
-    <div><%= inline_svg_tag("logos/ads-logo-full-cleaned.svg", class: "h-14 w-14 shrink-0 text-orange-500") %></div>
+    <div><%= inline_svg_tag("logos/ads-without-text.svg", class: "h-20 w-20 shrink-0") %></div>
     <h1 class="text-2xl font-bold tracking-tight text-gray-900 mt-2">Les Artisans du Store</h1>
-    <p class="mt-4 text-md text-white px-20 w-2/3 text-center">Notre Savoir-Faire pour un engagement durable</p>
   </div>
 
   <div data-carousel-target="container" class="flex transform transition-transform duration-300 h-full">
