--- a/app/components/photoslist_component.html.erb
+++ b/app/components/photoslist_component.html.erb
@@ -1,7 +1,7 @@
 <div data-controller="modal">
   <!-- Galerie photo -->
   <div class="flex items-center space-x-2 pt-10 pl-10">
-    <%= inline_svg_tag("icons/camera.svg", class: "text-orange-400") %>
+    <%= inline_svg_tag("icons/camera.svg", class: "text-gray-400 h-6 w-6") %>
     <h4 class="text-base font-semibold leading-6 text-gray-900">Galerie photo</h4>
   </div>
   <ul role="list" class="grid grid-cols-2 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6 lg:grid-cols-4 xl:gap-x-8 p-10">
