--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -22,6 +22,10 @@
   @apply inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700;
  }
 
+ nav.nav a.mobile-nav-item {
+  @apply inline-flex border-0 items-center px-1 pt-1 text-sm font-medium text-gray-500 hover:text-gray-700;
+ }
+
  nav.subnav a.active {
   @apply bg-gray-200 text-gray-800 rounded-md px-3 py-2 text-xs font-medium;
  }
