add models to admin

--- a/app/components/admin/navbar_component.html.erb
+++ b/app/components/admin/navbar_component.html.erb
@@ -34,6 +34,18 @@
                 Motoristes
               <% end %>
             </li>
+            <li>
+              <%= active_link_to admin_events_path do %>
+                <%= inline_svg_tag("icons/fire.svg", class: "h-6 w-6 shrink-0 text-gray-400")%>
+                Evènements
+              <% end %>
+            </li>
+            <li>
+              <%= active_link_to admin_quotes_path do %>
+                <%= inline_svg_tag("icons/fire.svg", class: "h-6 w-6 shrink-0 text-gray-400")%>
+                Devis
+              <% end %>
+            </li>
 
 
           </ul>
