--- a/app/components/admin/header_component.html.erb
+++ b/app/components/admin/header_component.html.erb
@@ -8,7 +8,7 @@
 
   <% if @path %>
     <div class="mt-6 flex flex-col-reverse justify-stretch space-y-4 space-y-reverse sm:flex-row-reverse sm:justify-end sm:space-x-3 sm:space-y-0 sm:space-x-reverse md:mt-0 md:flex-row md:space-x-3">
-      <%= link_to "Ajouter un produit", @path, class: "button" %>
+      <%= link_to "Ajouter", @path, class: "button" %>
     </div>
   <% end %>
 </div>
