--- a/app/components/admin/list_component.html.erb
+++ b/app/components/admin/list_component.html.erb
@@ -4,7 +4,7 @@
       <div class="min-w-0">
         <div class="flex items-start gap-x-3">
           <p class="text-sm font-semibold leading-6 text-gray-900"><%= item.name %></p>
-          <p class="rounded-md whitespace-nowrap mt-0.5 px-1.5 py-0.5 text-xs font-medium ring-1 ring-inset text-green-700 bg-green-50 ring-green-600/20">Complete</p>
+          <p class="rounded-md whitespace-nowrap mt-0.5 px-1.5 py-0.5 text-xs font-medium ring-1 ring-inset text-green-700 bg-green-50 ring-green-600/20"><%= item.category.name %></p>
         </div>
         <div class="mt-1 flex items-center gap-x-2 text-xs leading-5 text-gray-500">
           <p class="whitespace-nowrap">Due on <time datetime="2023-03-17T00:00Z">March 17, 2023</time></p>
