--- a/app/views/admin/brands/new.html.erb
+++ b/app/views/admin/brands/new.html.erb
@@ -1,1 +1,40 @@
 <%= render Admin::HeaderComponent.new(title: "Créer une nouvelle marque") %>
+
+<%= simple_form_for([:admin, @brand], data: {turbo: true}) do |f| %>
+
+  <div class="w-2/4">
+    <div class="flex items-center space-x-3 border-b h-12 pl-4">
+      <div class="text-sm font-medium text-slate-700">Infos</div>
+    </div>
+
+    <div class="p-8">
+      <div class="mb-6 flex space-x-8">
+        <div class="w-1/2">
+          <%= f.input :name, label: "Nom", wrapper: :admin_form %>
+        </div>
+      </div>
+
+
+      <div class="text-[10px] font-semibold text-slate-400 mb-3">Logo</div>
+      <div class="flex items-center space-x-3 mb-4">
+        <%= f.collection_radio_buttons :logo, @logos, :to_s, :to_s do |b| %>
+          <div class="checkbox-wrapper w-16">
+            <%= b.radio_button(class: "peer hidden") %>
+            <%= b.label(class: 'cursor-pointer text-[10px] flex items-center justify-center space-x-2 border p-1 rounded font-bold text-gray-700 peer-checked:bg-violet-50 peer-checked:border-violet-100 peer-checked:text-violet-600') do %>
+              <%= inline_svg_tag("logos/#{b.object}", class: "fill-slate-700 h-10 w-20") %>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+
+
+      <%= f.button :submit, "Enregistrer" %>
+
+
+
+    </div>
+
+  </div>
+
+
+<% end %>
