--- a/app/components/admin/list_component.html.erb
+++ b/app/components/admin/list_component.html.erb
@@ -1,22 +1,32 @@
-<ul role="list" class="divide-y divide-gray-100">
-  <% @items.each do |item| %>
-    <li class="flex items-center justify-between gap-x-6 py-5 px-8">
-      <div class="min-w-0">
-        <div class="flex items-start gap-x-3">
-          <p class="text-sm font-semibold leading-6 text-gray-900"><%= item.name %></p>
-          <p class="rounded-md whitespace-nowrap mt-0.5 px-1.5 py-0.5 text-xs font-medium ring-1 ring-inset text-green-700 bg-green-50 ring-green-600/20"><%= item.category.name %></p>
-        </div>
-        <div class="mt-1 flex items-center gap-x-2 text-xs leading-5 text-gray-500">
-          <p class="whitespace-nowrap">Due on <time datetime="2023-03-17T00:00Z">March 17, 2023</time></p>
-          <svg viewBox="0 0 2 2" class="h-0.5 w-0.5 fill-current">
-            <circle cx="1" cy="1" r="1" />
-          </svg>
-          <p class="truncate">Created by Unknow</p>
-        </div>
-      </div>
-      <div class="flex flex-none items-center gap-x-4">
-        <%= link_to "Modifier", edit_admin_product_path(item), class: "button-light" %>
-      </div>
-    </li>
-  <% end %>
-</ul>
+<div class="flex items-start space-x-8 bg-slate-50 py-10 px-10">
+  <div class="w-1/2 border border-slate-100 rounded-lg bg-white">
+    <ul role="list" class="divide-y divide-gray-100">
+      <% @items.each do |item| %>
+        <li class="flex items-center justify-between gap-x-6 py-5 px-8">
+          <div class="min-w-0">
+            <div class="flex items-center gap-x-3">
+              <%= link_to admin_product_path(item), data: { turbo_frame: "item_detail" } do %>
+                <p class="text-sm font-semibold leading-6 text-gray-900"><%= item.name %></p>
+              <% end %>
+              <p class="text-sm font-semibold leading-6 text-gray-900"><%= item.name %></p>
+              <p class="rounded-md whitespace-nowrap px-1.5 py-0.5 text-[9px] font-medium ring-1 ring-inset text-green-500 bg-green-50 ring-green-600/20"><%= item.category.name %></p>
+            </div>
+            <div class="mt-1 flex items-center gap-x-2 text-[9px] font-medium leading-5 text-slate-400">
+              <p class="whitespace-nowrap">Crée le <time><%= I18n.l item.created_at, format: :long %></time></p>
+            </div>
+          </div>
+          <div class="flex flex-none items-center gap-x-4">
+            <%= link_to "Modifier", edit_admin_product_path(item), class: "border rounded px-2 py-1 font-semibold border-violet-200 bg-violet-100 text-violet-500 text-[11px] hover:bg-violet-200" %>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+
+  <div class="w-1/2 border border-slate-100 rounded-lg bg-white min-h-10">
+    <%= turbo_frame_tag "item_detail" do %>
+      TOTO
+    <% end %>
+  </div>
+
+</div>
