--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -22,8 +22,13 @@
           <%= f.input :description, as: :text, label: "Description", wrapper: :admin_form %>
           <%= f.input :infos, as: :text, label: "Infos", wrapper: :admin_form %>
 
-          <div class="w-1/4">
-            <%= f.input :warranty, as: :numeric, label: "Garantie", wrapper: :admin_form %>
+          <div class="flex space-x-8">
+            <div class="w-1/4">
+              <%= f.input :warranty, as: :numeric, label: "Garantie", wrapper: :admin_form %>
+            </div>
+            <div class="w-1/4">
+              <%= f.input :brand_id, as: :select, label: "Marque", wrapper: :admin_form, collection: Brand.all, label_method: :name, value_method: :id, include_blank: "Sélectionnez une marque" %>
+            </div>
           </div>
 
 
