--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,2 +1,35 @@
 <%= render Admin::HeaderComponent.new(title: "Produits", path: new_admin_product_path) %>
-<%= render Admin::ListComponent.new(@products) %>
+
+<div class="flex items-start space-x-8 bg-slate-50 py-10 px-10">
+  <div class="w-1/2 border border-slate-100 rounded-lg bg-white">
+    <ul role="list" class="divide-y divide-gray-100">
+      <% @products.each do |product| %>
+        <li class="flex items-center justify-between gap-x-6 py-5 px-8">
+          <div class="min-w-0">
+            <div class="flex items-center gap-x-3">
+              <%= link_to admin_product_path(product), data: { turbo_frame: "item_detail" } do %>
+                <p class="text-sm font-semibold leading-6 text-gray-900"><%= product.name %></p>
+              <% end %>
+              <p class="rounded-md whitespace-nowrap px-1.5 py-0.5 text-[9px] font-medium ring-1 ring-inset text-green-500 bg-green-50 ring-green-600/20"><%= product.category.name %></p>
+            </div>
+            <div class="mt-1 flex items-center gap-x-2 text-[9px] font-medium leading-5 text-slate-400">
+              <p class="whitespace-nowrap">Crée le <time><%= I18n.l product.created_at, format: :long %></time></p>
+            </div>
+          </div>
+          <div class="flex flex-none items-center gap-x-4">
+            <%= link_to "Modifier", edit_admin_product_path(product), class: "border rounded px-2 py-1 font-semibold border-violet-200 bg-violet-100 text-violet-500 text-[11px] hover:bg-violet-200" %>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+
+  <div class="w-1/2 border border-slate-100 rounded-lg bg-white sticky top-10">
+    <%= turbo_frame_tag "item_detail", data: { controller: "fadein", action: "turbo:frame-load->fadein#removeOpacity" }, class: "opacity-0 transition delay-150 duration-500 ease-out" do %>
+      <div class="p-8 py-20 bg-slate-100 flex items-center justify-center">
+        <p class="font-semibold text-slate-400 text-[12px]">Cliquez sur un produit pour avoir plus de détails</p>
+      </div>
+    <% end %>
+  </div>
+
+</div>
