--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -2,26 +2,51 @@
 
 <div class="flex items-start space-x-8 bg-slate-50 py-10 px-10">
   <div class="w-1/2 border border-slate-100 rounded-lg bg-white">
-    <ul role="list" class="divide-y divide-gray-100">
-      <% @products.each do |product| %>
-        <li class="flex items-center justify-between gap-x-6 py-5 px-8">
-          <div class="min-w-0">
-            <div class="flex items-center gap-x-3">
-              <%= link_to admin_product_path(product), data: { turbo_frame: "item_detail" } do %>
-                <p class="text-sm font-semibold leading-6 text-gray-900"><%= product.name %></p>
-              <% end %>
-              <p class="rounded-md whitespace-nowrap px-1.5 py-0.5 text-[9px] font-medium ring-1 ring-inset text-green-500 bg-green-50 ring-green-600/20"><%= product.category.name %></p>
+
+    <%= turbo_frame_tag "product_list" do %>
+
+      <div class="flex items-center space-x-4 w-full overflow-x-scroll px-5 py-4 border-b border-slate-100 scrollbar">
+
+        <%= link_to admin_products_path, data: { turbo_frame: "product_list" }, class: "border border-slate-300 px-2 py-1 rounded" do %>
+          <p class="text-[9px] font-semibold text-slate-500 text-nowrap">Tout voir</p>
+        <% end %>
+
+        <% @categories.each do |category| %>
+          <% if @category && ( category.id == @category.id ) %>
+            <%= link_to admin_products_path(category_id: category.id), data: { turbo_frame: "product_list" }, class: "border border-violet-200 px-2 py-1 rounded" do %>
+              <p class="text-[9px] font-semibold text-violet-500 text-nowrap"><%= category.name %></p>
+            <% end %>
+          <% else %>
+            <%= link_to admin_products_path(category_id: category.id), data: { turbo_frame: "product_list" }, class: "border border-slate-100 px-2 py-1 rounded" do %>
+              <p class="text-[9px] font-semibold text-gray-300 text-nowrap"><%= category.name %></p>
+            <% end %>
+          <% end %>
+        <% end %>
+
+      </div>
+
+      <ul role="list" class="divide-y divide-gray-100">
+        <% @products.each do |product| %>
+          <li class="flex items-center justify-between gap-x-6 py-5 px-8">
+            <div class="min-w-0">
+              <div class="flex items-center gap-x-3">
+                <%= link_to admin_product_path(product), data: { turbo_frame: "item_detail" } do %>
+                  <p class="text-sm font-semibold leading-6 text-gray-900"><%= product.name %></p>
+                <% end %>
+                <p class="rounded-md whitespace-nowrap px-1.5 py-0.5 text-[9px] font-medium ring-1 ring-inset text-green-500 bg-green-50 ring-green-600/20"><%= product.category.name %></p>
+              </div>
+              <div class="mt-1 flex items-center gap-x-2 text-[9px] font-medium leading-5 text-slate-400">
+                <p class="whitespace-nowrap">Mis à jour le <time><%= I18n.l product.updated_at, format: :long %></time></p>
+              </div>
             </div>
-            <div class="mt-1 flex items-center gap-x-2 text-[9px] font-medium leading-5 text-slate-400">
-              <p class="whitespace-nowrap">Crée le <time><%= I18n.l product.created_at, format: :long %></time></p>
+            <div class="flex flex-none items-center gap-x-4">
+              <%= link_to "Modifier", edit_admin_product_path(product), data: { turbo: false }, class: "border rounded px-2 py-1 font-semibold border-violet-200 bg-violet-100 text-violet-500 text-[11px] hover:bg-violet-200" %>
             </div>
-          </div>
-          <div class="flex flex-none items-center gap-x-4">
-            <%= link_to "Modifier", edit_admin_product_path(product), class: "border rounded px-2 py-1 font-semibold border-violet-200 bg-violet-100 text-violet-500 text-[11px] hover:bg-violet-200" %>
-          </div>
-        </li>
-      <% end %>
-    </ul>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
+
   </div>
 
   <div class="w-1/2 border border-slate-100 rounded-lg bg-white sticky top-10">
