add destock page + examples on view

--- a/app/components/navbar_component.html.erb
+++ b/app/components/navbar_component.html.erb
@@ -10,6 +10,7 @@
           <%= active_link_to 'Accueil', root_path, active: :exclusive %>
           <%= active_link_to 'Produits', categories_path %>
           <%= active_link_to 'Devis', new_quote_path %>
+          <%= active_link_to 'Déstockage', destock_path %>
           <a href="#" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Contact</a>
         </div>
       </div>
