--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -38,7 +38,7 @@
         <div class="mt-2">
           <%= f.button :submit, "Envoyer", class: "w-full" %>
         </div>
-        <p class="mt-2 text-xs leading-6 font-medium text-gray-600 text-center">En soumettant ce formulaire, j'accepte la <a href="#" class="font-semibold text-indigo-600">politique de confidentialité</a>.</p>
+        <p class="mt-2 text-[9px] leading-6 font-semibold text-gray-600 text-center">En soumettant ce formulaire, j'accepte la <small class="font-semibold text-violet-600 text-[9px]">politique de confidentialité</small>.</p>
       <% end %>
 
     </div>
