--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -55,7 +55,7 @@
 
     <div class="bg-white">
 
-      <%= render ProductlistComponent.new(@category.products) %>
+      <%= render ProductlistComponent.new(@products) %>
 
     </div>
 
