add link to new quote from product

--- a/app/views/pages/destock.html.erb
+++ b/app/views/pages/destock.html.erb
@@ -1,32 +1,34 @@
 <div class="container mx-auto px-4 py-8">
-  <h1 class="text-2xl font-bold text-center mb-8">Déstockage</h1>
+  <div class="flex items-center mb-8 justify-center">
+    <div><%= inline_svg_tag("icons/banknotes.svg", class: "h-6 w-6 text-orange-500 mr-3 animate-pulse") %></div>
+    <h1 class="text-2xl font-bold text-center">Déstockage</h1>
+  </div>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
     <% @products.each do |product| %>
 
-      <div class="bg-white rounded-lg shadow-md overflow-hidden">
+      <div class="bg-white rounded-lg border border-slate-100 overflow-hidden flex flex-col">
         <img src="https://via.placeholder.com/400x300?text=Luxaflex" alt="Coffre intégral C400 de Coublanc" class="w-full h-48 object-cover">
-        <div class="p-4">
+        <div class="p-8">
           <h2 class="text-md font-bold text-slate-700"><%= product.name %></h2>
-          <p class="text-violet-500 text-[12px] font-medium">Dimensions : 5500 x 3500</p>
+          <p class="text-violet-500 text-[12px] font-medium"><%= "Dimensions: #{product.dimensions}" %></p>
           <ul class="list-disc list-inside text-gray-500 mt-3 text-xs font-medium">
-            <li>Coffre intégral C400 de Coublanc</li>
-            <li>Armature : Ral 7016</li>
-            <li>Moteur : Somfy Sunea Io</li>
-            <li>Télécommande : Situo 5 Io</li>
-            <li>Pare soleil : enroulable électrique</li>
-            <li>LED : à variation sous les 2 bras</li>
-            <li>Coloris : toile et pare soleil au choix</li>
-            <li>Quantité : 2 stores</li>
+            <% product.options.each do |option| %>
+              <li><%= option.content %></li>
+            <% end %>
           </ul>
           <div class="flex items-center mt-4">
-            <span class="text-slate-400 line-through font-medium text-sm mr-2">10000€ TTC posé</span>
-            <span class="text-violet-500 font-semibold text-lg">5900€ TTC posé</span>
+            <span class="text-slate-400 line-through font-medium text-sm mr-2"><%= "#{product.old_price} TTC posé" %></span>
+            <span class="text-violet-500 font-semibold text-lg"><%= "#{product.new_price} TTC posé" %></span>
           </div>
-          <p class="text-slate-400 text-[10px] font-medium mb-4">
+          <p class="text-slate-400 text-[10px] font-medium">
             (Dans un rayon de 30km autour de l’Arbresle)
           </p>
-          <%= link_to "Nous contacter", new_quote_path(product_id: product.id), class: "bg-orange-500 text-white text-center mt-4 px-3 py-2 rounded hover:bg-orange-600 transition text-xs font-medium" %>
         </div>
+        <div class="h-14 flex items-center justify-center border-t border-slate-100">
+          <%= link_to "Devis gratuit", new_quote_path(product_id: product.id), class: "bg-orange-50 text-orange-400 text-center px-2 py-1 border border-orange-200 rounded hover:bg-orange-100 transition text-[11px] font-semibold" %>
+        </div>
+
+
       </div>
 
     <% end %>
