--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -86,7 +86,6 @@
     </div>
 
     <% if @product.images.attached? %>
-
       <div class="border-t">
         <div class="flex space-x-3 items-center px-4 py-3">
           <div class="text-sm font-medium text-slate-700">Photos</div>
@@ -146,9 +145,6 @@
         </div>
 
       </div>
-
-
-
     <% else %>
       <div class="border-t">
         <div class="text-sm font-medium text-slate-700 my-4">Photos</div>
@@ -179,6 +175,106 @@
               <% end %>
 
               <div data-upload-target="preview" class="flex flex-col w-full items-center p-6"></div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    <% end %>
+
+    <% if @product.documentations.attached? %>
+      <div class="border-t">
+        <div class="flex space-x-3 items-center px-4 py-3">
+          <div class="text-sm font-medium text-slate-700">Documentations</div>
+          <span class="inline-flex items-center rounded bg-purple-50 px-2.5 py-1.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= "#{@product.documentations.size} Documentations" %></span>
+        </div>
+
+        <div class="flex border-t">
+
+          <ul role="list" class="p-12 w-3/4 grid grid-cols-2 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6 lg:grid-cols-6 xl:gap-x-8">
+            <% @product.documentations.each do |doc| %>
+              <li class="relative" data-controller="image" data-image-signed-id-value="<%= doc.signed_id %>">
+                <%= f.hidden_field :documentations, multiple: true, value: doc.signed_id, data: { image_target: "hiddenField" } %>
+                <div class="group overflow-hidden rounded-lg bg-gray-100 focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 focus-within:ring-offset-gray-100">
+                  <%= cl_image_tag(doc.key, crop: :scale, class: "pointer-events-none aspect-[10/7] object-cover group-hover:opacity-75") %>
+                </div>
+                <div class="mt-2">
+                  <p class="pointer-events-none truncate text-ellipsis text-[9px] font-semibold text-gray-900 border-b mb-2 pb-2 border-gray-100"><%= doc.blob.filename %></p>
+
+                  <div class="flex justify-between items-center">
+                    <span class="inline-flex items-center rounded-md bg-purple-50 px-1.5 py-0.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= "#{(doc.blob.byte_size.to_f / 1000000.0).round(1)} MB" %></span>
+                    <!-- Bouton de suppression -->
+                    <%= link_to "#", data: {action: "image#remove", turbo: false} do %>
+                      <div class="flex space-x-3 items-center">
+                        <%= inline_svg_tag("icons/trash.svg", class: "h-4 w-4 shrink-0 text-gray-600")%>
+                      </div>
+                    <% end %>
+                  </div>
+
+                </div>
+              </li>
+            <% end %>
+          </ul>
+
+          <div class="w-1/4 border-l flex flex-col items-center">
+
+            <div data-controller="docupload" class="w-full">
+              <!-- Champ de fichier pour télécharger l'image -->
+              <%= f.file_field :documentations, direct_upload: true, multiple: true, data: { docupload_target: "input", action: "change->docupload#uploadFile" }, style: "display: none;" %>
+
+              <%= link_to "#", class: "text-blue-600 text-sm font-bold", data: { action: "docupload#triggerFileInput" } do %>
+                <div class="p-6 w-full flex flex-col items-center">
+                  <div class="relative w-full flex flex-col items-center rounded-lg border-2 border-dashed border-gray-200 p-12 text-center hover:border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+                    <%= inline_svg_tag("icons/cube-transparent.svg", class: "h-10 w-10 text-violet-300")%>
+                    <span class="mt-2 block text-[11px] font-semibold text-slate-500">Ajoutez des documentations</span>
+                  </div>
+                  <small class="text-[8px] font-semibold text-center text-slate-400 mt-1">Sauvegardez le produit pour enregister les documentations</small>
+                </div>
+              <% end %>
+
+              <div data-docupload-target="preview" class="flex flex-col w-full items-center">
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    <% else %>
+      <div class="border-t">
+        <div class="text-sm font-medium text-slate-700 my-4">Documentations</div>
+
+        <div class="flex border-t">
+
+          <div class="w-3/4 p-12">
+
+            <div class="text-center flex flex-col items-center">
+              <%= inline_svg_tag("icons/exclamation-circle.svg", class: "h-6 w-6 shrink-0 text-red-500") %>
+              <h3 class="mt-2 text-sm font-semibold text-gray-900">0 Documentations</h3>
+              <p class="mt-1 text-xs font-medium text-gray-400">Ajoutez des documentations dans le menu à droite</p>
+            </div>
+
+          </div>
+
+          <div class="w-1/4 border-l flex flex-col items-center">
+
+            <div data-controller="docupload" class="w-full">
+              <!-- Champ de fichier pour télécharger l'image -->
+              <%= f.file_field :documentations, direct_upload: true, multiple: true, data: { docupload_target: "input", action: "change->docupload#uploadFile" }, style: "display: none;" %>
+
+              <%= link_to "#", class: "text-blue-600 text-sm font-bold", data: { action: "docupload#triggerFileInput" } do %>
+                <div class="bg-indigo-50 px-2 py-2 border-b border-indigo-100 text-xs font-semibold text-indigo-600 hover:bg-indigo-100 flex items-center w-full">
+                  <%= inline_svg_tag("icons/queue-list.svg", class: "h-3 w-3 shrink-0 text-indigo-500")%>
+                  <div class="ml-2">Add documentations</div>
+                </div>
+              <% end %>
+
+              <div data-docupload-target="preview" class="flex flex-col w-full items-center p-6"></div>
 
             </div>
 
