--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -121,6 +121,16 @@
         <%= inline_svg_tag("icons/pdf.svg", class: "fill-gray-400 h-6 w-6") %>
         <h3 class="text-sm font-semibold text-gray-900">Documentation</h3>
       </div>
+
+      <div class="flex space-x-4 items-center mt-4">
+        <% if @product.documentations.attached? %>
+          <%= link_to cloudinary_url(@product.documentations.first.key), target: "_blank" do %>
+            <div class="border rounded border-blue-200 bg-blue-50 px-3 py-2 text-xs font-medium text-blue-500 hover:text-blue-700"><%= @product.documentations.first.filename %></div>
+          <% end %>
+        <% end %>
+      </div>
+
+
     </div>
 
     <div class="w-full md:w-1/3 p-8 border-l border-gray-100">
