--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -122,10 +122,12 @@
         <h3 class="text-sm font-semibold text-gray-900">Documentation</h3>
       </div>
 
-      <div class="flex space-x-4 items-center mt-4">
+      <div class="flex flex-col space-y-3 items-center mt-4">
         <% if @product.documentations.attached? %>
-          <%= link_to cloudinary_url(@product.documentations.first.key), target: "_blank" do %>
-            <div class="border rounded border-blue-200 bg-blue-50 px-3 py-2 text-xs font-medium text-blue-500 hover:text-blue-700"><%= @product.documentations.first.filename %></div>
+          <% @product.documentations.each do |doc| %>
+            <%= link_to cloudinary_url(doc.key), target: "_blank" do %>
+              <div class="border rounded border-blue-200 bg-blue-50 px-3 py-2 text-xs font-medium text-blue-500 hover:text-blue-700"><%= doc.filename %></div>
+            <% end %>
           <% end %>
         <% end %>
       </div>
